# TrickSaberQuest

./: MIGRATION_NOTES.md  README.md
.amazonq/rules/: BUILD_TOOLS.md  Rules.md  portingGuide.md  questModding.md  scotland2info.md
TrickSaberQuestRebuild/: .gitignore  BUILD_SYSTEM.md  CHANGELOG.md  CMakeLists.txt  TrickSaber.qmod  create_qmod.sh  extern.cmake  mod.json  ndkpath.txt  qpm.json  qpm.shared.json  qpm_defines.cmake  quick_build.sh
TrickSaberQuestRebuild/binaries/: .gitignore  TrickSaber.qmod  tricksaber_v0.0.1.qmod
TrickSaberQuestRebuild/cmake/: gtest.cmake
TrickSaberQuestRebuild/include/: main.hpp
TrickSaberQuestRebuild/include/TrickSaber/: AdvancedInputManager.hpp  AdvancedInputSystem.hpp  AdvancedTrickFeatures.hpp  BurnMarkHandler.hpp  Config.hpp  Configuration.hpp  Constants.hpp  CustomTypesRegistration.hpp  EnhancedSaberManager.hpp  Enums.hpp  GlobalTrickManager.hpp  InputManager.hpp  InputManager_Enhanced.hpp  LogSanitizer.hpp  MovementController.hpp  PhysicsHandler.hpp  SaberState.hpp  SaberTrickManager.hpp  SaberTrickModel.hpp  SafePtrUnity.hpp  SlowmoHelper.hpp  TrailHandler.hpp  TrickManager.hpp
TrickSaberQuestRebuild/include/TrickSaber/Core/: StateManager.hpp  TrickSaberManager.hpp
TrickSaberQuestRebuild/include/TrickSaber/Input/: InputHandler.hpp
TrickSaberQuestRebuild/include/TrickSaber/Tricks/: FreezeThrowTrick.hpp  SpinTrick.hpp  ThrowTrick.hpp  Trick.hpp
TrickSaberQuestRebuild/include/TrickSaber/UI/: AdvancedSettingsUI.hpp  DebugOverlay.hpp  SettingsViewController.hpp
TrickSaberQuestRebuild/include/TrickSaber/Utils/: Coroutines.hpp  ErrorCircuitBreaker.hpp  HapticFeedbackHelper.hpp  LazyInitializer.hpp  MemoryManager.hpp  ObjectCache.hpp  ObjectPool.hpp  PerformanceMetrics.hpp  PooledTrickCalculation.hpp  TransformCache.hpp  UnityMath.hpp  VectorPool.hpp
TrickSaberQuestRebuild/scripts/: benchmark.ps1  build-all.ps1  build-all.sh  build-silent.ps1  build-silent.sh  build.ps1  build.sh  copy.sh  createqmod.ps1  createqmod.sh  device-integration-test.ps1  integration-test.ps1  performance-monitor.ps1  test-build-system.sh  test-host-isolated.ps1  test-host-isolated.sh  test-host.ps1  test-host.sh  test-lazy-init.ps1  test-memory-pooling.ps1  test.ps1  test.sh
TrickSaberQuestRebuild/src/: main.cpp
TrickSaberQuestRebuild/src/TrickSaber/: AdvancedInputManager.cpp  AdvancedInputSystem.cpp  AdvancedTrickFeatures.cpp  BurnMarkHandler.cpp  Config.cpp  Configuration.cpp  CustomTypeInstantiations.cpp  CustomTypesRegistration.cpp  EnhancedInputIntegration.cpp  EnhancedSaberManager.cpp  GlobalTrickManager.cpp  InputManager.cpp  InputManagerEnhanced.cpp  LogSanitizer.cpp  MovementController.cpp  PhysicsHandler.cpp  SaberTrickManager.cpp  SaberTrickModel.cpp  SlowmoHelper.cpp  TrailHandler.cpp  TrickManager.cpp
TrickSaberQuestRebuild/src/TrickSaber/Core/: StateManager.cpp  TrickSaberManager.cpp
TrickSaberQuestRebuild/src/TrickSaber/Input/: InputHandler.cpp
TrickSaberQuestRebuild/src/TrickSaber/Tricks/: FreezeThrowTrick.cpp  SpinTrick.cpp  ThrowTrick.cpp  Trick.cpp
TrickSaberQuestRebuild/src/TrickSaber/UI/: AdvancedSettingsUI.cpp  DebugOverlay.cpp  SettingsViewController.cpp
TrickSaberQuestRebuild/src/TrickSaber/Utils/: Coroutines.cpp  HapticFeedbackHelper.cpp  LazyInitializer.cpp  MemoryManager.cpp  ObjectCache.cpp  PerformanceMetrics.cpp  TransformCache.cpp  VectorPool.cpp
TrickSaberQuestRebuild/src/hooks/: GameplayHooks.cpp  SaberHooks.cpp  SceneHooks.cpp
TrickSaberQuestRebuild/test/: ConfigTest.cpp.disabled  HostMocks.hpp  InputValidationTest.cpp.disabled  IntegrationTest.cpp.disabled  MemoryManagementTest.cpp.disabled  MockVectorPool.cpp  MockVectorPool.hpp  PerformanceMetricsTest.cpp.disabled  PhysicsTest.cpp.disabled  QuestPlatformIntegrationTest.cpp.disabled  SimpleConfigTest.cpp  StateManagerTest.cpp.disabled  SystemIntegrationTest.cpp.disabled  TrickInputIntegrationTest.cpp.disabled  TrickTest.cpp.disabled  VRControllerMock.hpp  VRControllerMockTest.cpp.disabled  VectorPoolTest.cpp
